<package format="2">
  <name>slam_car_urdf</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for slam_car_urdf</p>
    <p>This package contains configuration data, 3D models and launch files
for slam_car_urdf robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="2652740017@qq.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>